--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -1,8 +1,17 @@
-title: RTFM Documentation
+title: 'NEM NIS API Documentation'
+default_lang: en
+author:
+  name: 'John Appleseed'
+  email: john@email.com
+taxonomies:
+  - category
+  - tag
 metadata:
-    description: 'RTFM Skeleton'
-
-taxonomies: [category,tag]
+  description: 'NEM NIS API Documentation'
 summary:
+  enabled: true
+  format: short
   size: 300
-
+  delimiter: '==='
+blog:
+  route: /blog
